--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ body{
 }
 
 .home,.about,.contact{
-    font-size: 20px;
+    font-size: 25px;
     font-family: mont;
     color: white;
 }
@@ -36,13 +36,15 @@ body{
 .top
 {
     display: flex;
+    justify-content: center;
+    margin-top: -50px;
 }
 
 .streamixx{
     font-size: 40px;
-    margin-right: 450px;
     font-family: play;
     color: white;
+    display: flex;
 }
 
 @media (max-width:768px)
@@ -54,7 +56,7 @@ body{
 
     .navbar
     {
-        margin-top: 30px;
+        margin-top: 70px;
         justify-content: center;
     }
 
@@ -72,6 +74,5 @@ body{
     .streamixx
     {
         justify-content: center;
-        margin-left: 110px;
     }
 }
