--- a/style.css
+++ b/style.css
@@ -62,6 +62,27 @@ a
     display: flex;
 }
 
+.welcome{
+    color: white;
+    height: 300px;
+    font-size: 10.5vw;
+}
+
+.welcomepage
+{
+    height: 300px;
+}
+
+.image
+{
+    height: 300px;
+    background-image: url(Welcome.jpg);
+    background-size: cover;
+    z-index: -1;
+    position: relative;
+    top: -305px;
+}
+
 @media (max-width:768px)
 {
     .top
