--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     font-family: robo;
     src: url(./fonts/Roboto_Slab/static/RobotoSlab-Regular.ttf);
 }
-.{
+body{
     font-family: 'Poppins';
 }
 body{
