--- a/style.css
+++ b/style.css
@@ -67,8 +67,10 @@ a
 .welcome{
     color: white;
     height: 300px;
-    font-size: 10.5vw;
+    font-size: 8vw;
     font-family: 'Poppins';
+    text-align: center;
+    margin-top:140px;
 }
 
 .welcomepage
