--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ a
 .welcome{
     color: white;
     height: 300px;
-    font-size: 120px;
+    font-size: 8vw;
     font-family: 'Poppins';
     text-align: center;
     margin-top:140px;
