--- a/style.css
+++ b/style.css
@@ -543,21 +543,25 @@ label
     .image1
     {
         height:25%;
+        width: 91%;
     }
     
     .image2
     {
         height: 25%;
+        width: 91%;
     }
 
     .image3
     {
         height:25%;
+        width: 91%;
     }
     
     .image4
     {
         height: 25%;
+        width: 91%;
     }
 
     .welcome
