--- a/style.css
+++ b/style.css
@@ -460,11 +460,7 @@ label
     border: 2px solid yellow;
 }
 
-.video-container video {
-    position: absolute;
-    left: 60px;
-    width: 100%;
-    height: 100%;
+.action-genre video {
     object-fit: cover;
   }
 
@@ -502,6 +498,16 @@ label
     {
         width: 250px;
     }
+
+    .action-genre video {
+        object-fit: cover;
+      }
+
+      .action-genre
+      {
+        flex-direction: column;
+      }
+
 
     .name
     {
