--- a/style.css
+++ b/style.css
@@ -108,7 +108,7 @@ a
 {
     height: 150px;
     width: 100%;
-    background-image: url(Long1.png);
+    background-image: url(./Data/welsnip/Long1.png);
     background-size: cover;
     z-index: -1;
     position: absolute;
@@ -122,7 +122,7 @@ a
 {
     height: 150px;
     width: 100%;
-    background-image: url(Long1.png);
+    background-image: url(./Data/welsnip/Long1.png);
     background-size: cover;
     z-index: -1;
     position: absolute;
@@ -136,7 +136,7 @@ a
 {
     height: 150px;
     width: 100%;
-    background-image: url(Long2.png);
+    background-image: url(./Data/welsnip/Long2.png);
     background-size: cover;
     z-index: -1;
     position: absolute;
@@ -150,7 +150,7 @@ a
 {
     height: 150px;
     width: 100%;
-    background-image: url(Long2.png);
+    background-image: url(./Data/welsnip/Long2.png);
     background-size: cover;
     z-index: -1;
     position: absolute;
@@ -258,7 +258,7 @@ a
 {
     width: 50px;
     height: 50px;
-    background-image: url(instaicon.png);
+    background-image: url(./Data/aboutus/instaicon.png);
     background-size: cover;
 }
 
@@ -266,13 +266,13 @@ a
 {
     width: 50px;
     height: 50px;
-    background-image: url(linkedin.png);
+    background-image: url(./Data/aboutus/linkedin.png);
     background-size: cover;
 }
 
 .harshitsingla
 {
-    background-image: url(./1676978770134.jpeg);
+    background-image: url(./Data/aboutus/has.jpeg);
     border-radius: 50%;
     overflow: hidden;
     width: 250px;
@@ -289,7 +289,7 @@ a
 
 .harshitabansal
 {
-    background-image: url(./1682593268001.jpeg);
+    background-image: url(./Data/aboutus/habs.jpeg);
     border-radius: 50%;
     overflow: hidden;
     width: 250px;
@@ -306,7 +306,7 @@ a
 
 .harshpreetsingh
 {
-    background-image: url(./1677823768660.jpeg);
+    background-image: url(./Data/aboutus/hspr.jpeg);
     border-radius: 50%;
     overflow: hidden;
     width: 250px;
@@ -352,7 +352,7 @@ a
 
 .topicon
 {
-    background-image: url(OIP.png);
+    background-image: url(./Data/extras/OIP.png);
     background-size: cover;
     color: white;
     position: fixed;
@@ -373,7 +373,7 @@ label
 .feedimage
 {
     display: flex;
-    background-image: url(Feedback.png);
+    background-image: url(./Data/extras/Feedback.png);
     background-size: contain;
     background-repeat: no-repeat;
     width: 540px;
