--- a/style.css
+++ b/style.css
@@ -169,14 +169,61 @@ a
     text-shadow: 0 0 15px yellow;
 }
 
-.buttons{
-    display:flex;
-    justify-content: center;
-    align-items: center;
-    margin-top:50px;
-    padding-top:20px;
-    padding-bottom: 20px;
+
+
+#dropdown {
+    position: relative;
+    display: inline-block;
+    padding: 10px;
+    border-radius: 5px;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.2);
+    transition: background-color 0.9s ease;
 }
+#dropdown:hover {
+    background-color: #ff3131;
+}
+
+#dropdown-content {
+    display: none;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    z-index: 1;
+    padding: 10px;
+    border-radius: 5px;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.2);
+    animation-name: fade-in;
+    animation-duration: 2s;
+    animation-timing-function: ease-out;
+    transform-origin: top;
+    opacity: 0;
+}
+
+#dropdown:hover #dropdown-content {
+    display: block;
+    animation-name: slide-down;
+    animation-duration: 0.3s;
+    animation-timing-function: ease-out;
+    animation-fill-mode: forwards;
+}
+.cont{
+    display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 100px;
+    margin-bottom: 200px;
+    margin-top:25px;
+}
+@keyframes fade-in {
+    from { opacity: 0; }
+    to { opacity: 1; }
+}
+
+@keyframes slide-down {
+    from { transform: scaleY(0); }
+    to { transform: scaleY(1); opacity: 1; }
+}
+
 
 @keyframes example1 {
     0%   {background-color:red; left: -100%;}
@@ -525,6 +572,22 @@ p
     margin: 5px;
 }
 
+#rdnpickx{
+    display: inline-block;
+    font-family: 'Poppins';
+    border-radius: 4px;
+    background-color: #ff3131;
+    border: none;
+    color: #FFFFFF;
+    text-align: center;
+    font-size: 17px;
+    padding: 16px;
+    width: 250px;
+    transition: all 0.5s;
+    cursor: pointer;
+    margin: 5px;
+}
+
 #rdnpick span {
     cursor: pointer;
     display: inline-block;
@@ -544,6 +607,7 @@ p
 #rdnpick:hover span {
     padding-right: 15px;
    }
+
    
 #rdnpick:hover span:after {
     opacity: 1;
