--- a/mutiplegenrelist.css
+++ b/mutiplegenrelist.css
@@ -78,6 +78,10 @@ a
   letter-spacing: 5px;
 }
 
+.headline{
+  display: flex;
+  justify-content: center;
+}
 
 .moviecontainer
 {
@@ -103,27 +107,72 @@ a
 
 button {
     padding: 10px 20px;
-    margin-left: 15px;
+    margin-left: 50px;
     font-size: 16px;
-    background-color: #ff0000;
+    background-color: red;
     border: none;
     border-radius: 4px;
     transition: transform 0.3s;
-  }
+    height: 70px;
+    width: 150px;
+}
+
+button:hover{
+  box-shadow: 0 0 10px white;
+}
+
+button.pressed {
+  transform: translateY(20px) translateX(10px);
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.4);
+  box-shadow: 0 0 10px rgb(204, 255, 0);
+}
+
+.result {
+  margin-top: 20px;
+  font-size: 18px;
+  color: white;
+}
+
+#button-container{
+  display: flex;
+  justify-content: center;
+  padding: 30px;
+}
   
-  button:hover{
-    box-shadow: 0 0 15px yellow;
+
+#merge-button
+{
+  border:2px solid white;
+}
+
+.merge-button{
+  display: flex;
+  justify-content: center;
+}
+
+
+@media screen and (max-width:768px) {
+
+  #button-container{
+    flex-direction: column;
   }
-  
-  button.pressed {
-    transform: translateY(4px);
-    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.4);
-    box-shadow: 0 0 15px green;
+
+  button{
+    margin-bottom: 25px;
+    margin-left: 100px;
+
   }
-  
-  .result {
-    margin-top: 20px;
-    font-size: 18px;
-    color: white;
+
+  .heading{
+    font-size: 55px;
   }
-  
+
+  .top{
+    flex-direction: column;
+    margin-top: 30px;
+  }
+
+  #merge-button{
+    margin:0;
+  }
+}
