--- a/stylepick.css
+++ b/stylepick.css
@@ -98,6 +98,7 @@ a
 .genreselected
 {
     display: flex;
+    justify-content: center;
     text-shadow: 0 0 15px yellow;
     font-size: 150px;
     text-align: center;
