--- a/style.css
+++ b/style.css
@@ -377,7 +377,7 @@ a
 
 .harshitsingla
 {
-    background-image: url(./Data/aboutus/has.jpeg);
+    background-image: url(./Data/aboutus/has.jpg);
     border-radius: 50%;
     overflow: hidden;
     width: 250px;
