--- a/style.css
+++ b/style.css
@@ -62,6 +62,46 @@ a
     font-family: 'Poppins';
     color: white;
 }
+/* Navigation links style */
+.navbar {
+    display: flex;
+    padding: 15px;
+    text-shadow: 0 0 15px yellow;
+    font-weight: 600;
+    gap: 50px;
+}
+
+.navbar a {
+    text-decoration: none;
+    color: white;
+    position: relative; /* For creating the underline effect */
+    font-weight: 600;
+    transition: color 0.3s;
+}
+
+/* Add a sliding underline effect on hover */
+.navbar a::before {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    bottom: 0;
+    left: 0;
+    background-color: yellow;
+    transform: scaleX(0);
+    transform-origin: right;
+    transition: transform 0.3s ease-in-out;
+}
+
+.navbar a:hover {
+    color: yellow;
+}
+
+/* Expand the underline effect on hover */
+.navbar a:hover::before {
+    transform: scaleX(1);
+    transform-origin: left;
+}
 
 .top
 {
